# AgoraRtmSDKForC

./: .gitignore  CMakeLists.txt  README.md  run.sh
Agora_RTM_SDK_for_Linux_MINI_RTM/rtm/: commits  package_size_report.txt
Agora_RTM_SDK_for_Linux_MINI_RTM/rtm/sdk/high_level_api/include/: IAgoraRtmClient.h  IAgoraStreamChannel.h
cmake/: AgoraRtmSdk.cmake  framework_to_dylib.py
include/: C_AgoraRtmBase.h  C_IAgoraRtmClient.h  C_IAgoraRtmHistory.h  C_IAgoraRtmLock.h  C_IAgoraRtmPresence.h  C_IAgoraRtmStorage.h  C_IAgoraStreamChannel.h  agora_rtm_api.h
include/bridge/: C_RtmEventHandlerBridge.h  RtmEventHandlerBridge.hh
libs/mac/: libaosl.dylib
libs/mac/2.2.4/: libagora_rtm_sdk_c.dylib
libs/mac/2.2.4.1/: libagora_rtm_sdk_c.dylib
samples/RTMProjectC/: CMakeLists.txt  RTMQuickStartC.c  run.sh
src/: C_AgoraRtmBase.cpp  C_IAgoraRtmClient.cpp  C_IAgoraRtmHistory.cpp  C_IAgoraRtmLock.cpp  C_IAgoraRtmPresence.cpp  C_IAgoraRtmStorage.cpp  C_IAgoraStreamChannel.cpp
src/bridge/: RtmEventHandlerBridge.cpp
